--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/index.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365 
 title: Launch and monitor Viva Connections
-summary: Now that you are finishing building and customizing your plan, it’s time to announce the launch and availability of Viva Connections throughout your organization. Learn more about the best practices for announcing and launching Viva Connections and ways to manage change and evaluate adoption in your organization.
+summary: Now that you're finishing building and customizing your plan, it’s time to announce the launch and availability of Viva Connections throughout your organization. Learn more about the best practices for announcing and launching Viva Connections and ways to manage change and evaluate adoption in your organization.
 abstract: |
   By the end of this module, you'll be able to:
     - Describe the main features of Viva Connections
