fixing commit conflicts

--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/6-knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/6-knowledge-check.yml
@@ -4,7 +4,7 @@ title: Knowledge check
 metadata:
   unitType: knowledge_check
   title: Knowledge check
-  description: Knowledge check questions for the learner to self assess how to launch and monitor Viva Connections.
+  description: Knowledge check questions for the learner to self assess on knowledge of how to launch and monitor Viva Connections.
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
