--- a/learn-m365-pr/wwl/explore-device-management-use-microsoft-endpoint-manager/3-explore-co-management-windows-devices.yml
+++ b/learn-m365-pr/wwl/explore-device-management-use-microsoft-endpoint-manager/3-explore-co-management-windows-devices.yml
@@ -1,9 +1,9 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.explore-device-management-use-microsoft-endpoint-manager.explore-co-management-windows-devices
-title: Explore Co-management of Windows devices
+title: Explore co-management of Windows devices
 metadata:
-  title: Explore Co-management of Windows devices
-  description: "Explore Co-management of Windows devices"
+  title: Explore co-management of Windows devices
+  description: "Explore co-management of Windows devices"
   ms.date: 07/15/2022
   author: wwlpublish
   ms.author: tfrink
