--- a/learn-m365-pr/m365/viva-connections-plan/index.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module
-uid: learn.viva-connections-plan
+uid: learn-m365.viva-connections-plan
 metadata:
   moduleType: standard
   title: Plan for Viva Connections
