--- a/learn-m365-pr/m365/viva-connections-introduction/index.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module
-uid: learn.viva-connections-introduction
+uid: learn-m365.viva-connections-introduction
 metadata:
   moduleType: standard
   title: Introduction to Viva Connections
