--- a/learn-m365-pr/m365/viva-connections-set-up/index.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module
-uid: learn.viva-connections-set-up
+uid: learn-m365.viva-connections-set-up
 metadata:
   moduleType: standard
   title: Set up Viva Connections
