--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/index.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/index.yml
@@ -1,5 +1,5 @@
 ### YamlMime:Module
-uid: learn.viva-connections-launch-and-monitor
+uid: learn-m365.viva-connections-launch-and-monitor
 metadata:
   moduleType: standard
   title: Launch and monitor Viva Connections
