fixing UIDs in vc module 1

--- a/learn-m365-pr/m365/viva-connections-introduction/1-introduction.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/1-introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.introduction
+uid: learn-m365.viva-connections-introduction.introduction
 title: Introduction
 metadata:
   unitType: introduction
