--- a/learn-m365-pr/m365/viva-connections-introduction/2-what-do-users-experience.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/2-what-do-users-experience.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.what-do-users-experience
+uid: learn-m365.viva-connections-introduction.what-do-users-experience
 title: What do users experience?
 metadata:
   unitType: learning-content
