--- a/learn-m365-pr/m365/viva-connections-introduction/3-when-to-use-viva-connections.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/3-when-to-use-viva-connections.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.when-to-use-viva-connections
+uid: learn-m365.viva-connections-introduction.when-to-use-viva-connections
 title: When to use Viva Connections?
 metadata:
   unitType: exercise
