--- a/learn-m365-pr/m365/viva-connections-introduction/4-what-technical-requirements-must-be-met.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/4-what-technical-requirements-must-be-met.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.what-technical-requirements-must-be-met
+uid: learn-m365.viva-connections-introduction.what-technical-requirements-must-be-met
 title: What technical requirements must be met to deploy Viva Connections?
 metadata:
   unitType: learning-content
