--- a/learn-m365-pr/m365/viva-connections-introduction/6-summary.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/6-summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-introduction.summary
+uid: learn-m365.viva-connections-introduction.summary
 title: Summary
 metadata:
   unitType: summary
