fix more UIDs in vc module2

--- a/learn-m365-pr/m365/viva-connections-plan/2-build-your-team-and-meet-requirements.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/2-build-your-team-and-meet-requirements.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-plan.build-your-team-and-meet-requirements
+uid: learn-m365.viva-connections-plan.build-your-team-and-meet-requirements
 title: Build your team and meet requirements
 metadata:
   unitType: learning-content
