--- a/learn-m365-pr/m365/viva-connections-plan/4-plan-for-viva-connections-dashboard-feed-and-resources.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/4-plan-for-viva-connections-dashboard-feed-and-resources.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
+uid: learn-m365.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
 title: Plan for Viva Connections Dashboard, Feed and Resources 
 metadata:
   unitType: learning-content
