--- a/learn-m365-pr/m365/viva-connections-plan/5-plan-to-announce-launch-and-scale-adoption.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/5-plan-to-announce-launch-and-scale-adoption.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-plan.plan-to-announce-launch-and-scale-adoption
+uid: learn-m365.viva-connections-plan.plan-to-announce-launch-and-scale-adoption
 title: Plan to announce, launch, and scale adoption 
 metadata:
   unitType: learning-content
