--- a/learn-m365-pr/m365/viva-connections-plan/1-introduction.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/1-introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-plan.introduction
+uid: learn-m365.viva-connections-plan.introduction
 title: Introduction
 metadata:
   unitType: Introduction
