--- a/learn-m365-pr/m365/viva-connections-plan/3-analyze-tasks-and-scenarios-for-viva-connections.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/3-analyze-tasks-and-scenarios-for-viva-connections.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-plan.analyze-tasks-and-scenarios-for-viva-connections
+uid: learn-m365.viva-connections-plan.analyze-tasks-and-scenarios-for-viva-connections
 title: Analyze tasks and scenarios for Viva Connections
 metadata:
   unitType: exercise
