--- a/learn-m365-pr/m365/viva-connections-plan/6-knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/6-knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-plan.knowledge-check
+uid: learn-m365.viva-connections-plan.knowledge-check
 title: Knowledge check
 metadata:
   unitType: knowledge_check
