--- a/learn-m365-pr/m365/viva-connections-plan/index.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/index.yml
@@ -29,12 +29,12 @@ products:
 - viva
 - m365 
 units:
-- learn.viva-connections-plan.introduction
-- learn.viva-connections-plan.build-your-team-and-meet-requirements
-- learn.viva-connections-plan.analyze-tasks-and-scenarios-for-viva-connections
-- learn.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
-- learn.viva-connections-plan.knowledge-check
-- learn.viva-connections-plan.plan-to-announce-launch-and-scale-adoption
-- learn.viva-connections-plan.summary
+- learn-m365.viva-connections-plan.introduction
+- learn-m365.viva-connections-plan.build-your-team-and-meet-requirements
+- learn-m365.viva-connections-plan.analyze-tasks-and-scenarios-for-viva-connections
+- learn-m365.viva-connections-plan.plan-for-viva-connections-dashboard-feed-and-resources
+- learn-m365.viva-connections-plan.knowledge-check
+- learn-m365.viva-connections-plan.plan-to-announce-launch-and-scale-adoption
+- learn-m365.viva-connections-plan.summary
 badge:
-  uid: learn.viva-connections-plan.badge
+  uid: learn-m365.viva-connections-plan.badge
