--- a/learn-m365-pr/m365/viva-connections-set-up/2-requirements-and-pre-work.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/2-requirements-and-pre-work.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.requirements-and-pre-work
+uid: learn-m365.viva-connections-set-up.requirements-and-pre-work
 title: Requirements and pre-work
 metadata:
   unitType: learning-content
