--- a/learn-m365-pr/m365/viva-connections-set-up/3-build-the-dashboard.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/3-build-the-dashboard.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.build-the-dashboard
+uid: learn-m365.viva-connections-set-up.build-the-dashboard
 title: Build the Dashboard
 metadata:
   unitType: exercise
