--- a/learn-m365-pr/m365/viva-connections-set-up/4-prepare-content-for-the-feed.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/4-prepare-content-for-the-feed.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.prepare-content-for-the-feed
+uid: learn-m365.viva-connections-set-up.prepare-content-for-the-feed
 title: Prepare content for the Feed 
 metadata:
   unitType: learning-content
