--- a/learn-m365-pr/m365/viva-connections-set-up/6-review-audience-targeting-settings-before-launching.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/6-review-audience-targeting-settings-before-launching.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.review-audience-targeting-settings-before-launching
+uid: learn-m365.viva-connections-set-up.review-audience-targeting-settings-before-launching
 title: Review audience targeting settings before launching 
 metadata:
   unitType: learning-content
