--- a/learn-m365-pr/m365/viva-connections-set-up/7-add-the-dashboard-and-feed-web-parts-to-the-home-site.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/7-add-the-dashboard-and-feed-web-parts-to-the-home-site.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.add-the-dashboard-and-feed-web-parts-to-the-home-site
+uid: learn-m365.viva-connections-set-up.add-the-dashboard-and-feed-web-parts-to-the-home-site
 title: Add the Dashboard and Feed web parts to the home site 
 metadata:
   unitType: learning-content
