--- a/learn-m365-pr/m365/viva-connections-set-up/8-summary.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/8-summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.summary
+uid: learn-m365.viva-connections-set-up.summary
 title: Summary
 metadata:
   unitType: summary
