--- a/learn-m365-pr/m365/viva-connections-set-up/5-set-up-resources.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/5-set-up-resources.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-set-up.set-up-resources
+uid: learn-m365.viva-connections-set-up.set-up-resources
 title: Set up Resources 
 metadata:
   unitType: learning-content
