fixing more vc module 4 UIDs

--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/7-summary.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/7-summary.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-launch-and-monitor.summary
+uid: learn-m365.viva-connections-launch-and-monitor.summary
 title: Summary
 metadata:
   unitType: summary
