--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/1-introduction.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/1-introduction.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.viva-connections-launch-and-monitor.introduction
+uid: learn-m365.viva-connections-launch-and-monitor.introduction
 title: Introduction
 metadata:
   unitType: introduction
@@ -9,7 +9,7 @@ metadata:
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365 Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 1
 content: |
   [!include[](includes/1-introduction.md)]
