--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/index.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/index.yml
@@ -29,12 +29,12 @@ products:
 - viva
 - m365
 units:
-- learn.viva-connections-launch-and-monitor.introduction
-- learn.viva-connections-launch-and-monitor.test-viva-connections-before-launch
-- learn.viva-connections-launch-and-monitor.announce-viva-connections-to-your-organization
-- learn.viva-connections-launch-and-monitor.help-your-organization-manage-change
-- learn.viva-connections-launch-and-monitor.use-metrics-to-evaluate
-- learn.viva-connections-launch-and-monitor.knowledge-check
-- learn.viva-connections-launch-and-monitor.summary
+- learn-m365.viva-connections-launch-and-monitor.introduction
+- learn-m365.viva-connections-launch-and-monitor.test-viva-connections-before-launch
+- learn-m365.viva-connections-launch-and-monitor.announce-viva-connections-to-your-organization
+- learn-m365.viva-connections-launch-and-monitor.help-your-organization-manage-change
+- learn-m365.viva-connections-launch-and-monitor.use-metrics-to-evaluate
+- learn-m365.viva-connections-launch-and-monitor.knowledge-check
+- learn-m365.viva-connections-launch-and-monitor.summary
 badge:
-  uid: learn.viva-connections-launch-and-monitor.badge
+  uid: learn-m365.viva-connections-launch-and-monitor.badge
