Revert "fixing more vc module 4 UIDs"
This reverts commit 5be6bb66e032dbaf442defbfbf90ddaf6456526f.

--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/3-announce-viva-connections-to-your-organization.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/3-announce-viva-connections-to-your-organization.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-connections-launch-and-monitor.announce-viva-connections-to-your-organization
+uid: learn.viva-connections-launch-and-monitor.announce-viva-connections-to-your-organization
 title: Announce Viva Connections to your organization?
 metadata:
   unitType: learning-content
