--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/6-knowledge-check.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/6-knowledge-check.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-connections-launch-and-monitor.knowledge-check
+uid: learn.viva-connections-launch-and-monitor.knowledge-check
 title: Knowledge check
 metadata:
   unitType: knowledge_check
