--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/2-test-viva-connections-before-launch.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/2-test-viva-connections-before-launch.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-connections-launch-and-monitor.test-viva-connections-before-launch
+uid: learn.viva-connections-launch-and-monitor.test-viva-connections-before-launch
 title: Test Viva Connections before launch
 metadata:
   unitType: learning-content
@@ -9,7 +9,7 @@ metadata:
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365
+  ms.prod: learning-m365# Edit as appropriate for your portfolio area
 durationInMinutes: 3
 content: |
   [!include[](includes/2-test-viva-connections-before-launch.md)]
