--- a/learn-m365-pr/m365/viva-connections-launch-and-monitor/4-help-your-organization-manage-change.yml
+++ b/learn-m365-pr/m365/viva-connections-launch-and-monitor/4-help-your-organization-manage-change.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn-m365.viva-connections-launch-and-monitor.help-your-organization-manage-change
+uid: learn.viva-connections-launch-and-monitor.help-your-organization-manage-change
 title: Help your organization manage change 
 metadata:
   unitType: learning-content
@@ -9,7 +9,7 @@ metadata:
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365
+  ms.prod: learning-m365dit as appropriate for your portfolio area
 durationInMinutes: 5
 content: |
   [!include[](includes/4-help-your-organization-manage-change.md)]
