--- a/learn-m365-pr/wwl/manage-phone-system-for-microsoft-teams/02-explore-phone-system.yml
+++ b/learn-m365-pr/wwl/manage-phone-system-for-microsoft-teams/02-explore-phone-system.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.manage-phone-system-for-microsoft-teams.explore
-title: Explore Phone System
+title: Explore Teams Phone
 metadata:
-  title: Explore Phone System
-  description: "Explore Phone System"
-  ms.date: 11/18/2021
+  title: Explore Teams Phone
+  description: "Explore Teams Phone"
+  ms.date: 07/15/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
