--- a/learn-m365-pr/m365/viva-connections-introduction/4-what-technical-requirements-must-be-met.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/4-what-technical-requirements-must-be-met.yml
@@ -9,7 +9,7 @@ metadata:
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
-  ms.prod: learning-m365 Edit as appropriate for your portfolio area
+  ms.prod: learning-m365
 durationInMinutes: 5
 content: |
   [!include[](includes/4-what-technical-requirements-must-be-met.md)]
