--- a/learn-m365-pr/paths/prepare-for-device-management-microsoft-365/index.yml
+++ b/learn-m365-pr/paths/prepare-for-device-management-microsoft-365/index.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.prepare-for-device-management-microsoft-365
 metadata:
   title: Prepare for device management in Microsoft 365
   description: Prepare for device management in Microsoft 365
-  ms.date: 10/05/2021
+  ms.date: 07/18/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
@@ -24,17 +24,18 @@ roles:
 - solution-architect
 - technology-manager
 products:
-- azure-active-directory
 - m365
 - office-365
 subjects:
-- device-management
+- business-applications
 - cloud-computing
+- cloud-security
+- communication
+- device-management
 modules:
-- learn.wwl.introduction-to-co-management-of-windows-10-devices
+- learn.wwl.explore-device-management-use-microsoft-endpoint-manager
 - learn.wwl.prepare-your-windows-10-devices-for-co-management
-- learn.wwl.transition-from-configuration-manager-to-intune
-- learn.wwl.introduction-to-microsoft-store-for-business
+- learn.wwl.implement-endpoint-security-microsoft-intune
 - learn.wwl.plan-for-mobile-application-management
 trophy:
   uid: learn.wwl.prepare-for-device-management-microsoft-365.trophy
