--- a/learn-m365-pr/wwl/manage-meetings-virtual-events-experiences/02-explore-meetings-virtual-events.yml
+++ b/learn-m365-pr/wwl/manage-meetings-virtual-events-experiences/02-explore-meetings-virtual-events.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.manage-meetings-virtual-events-experiences.explore-microsoft-teams
-title: Explore meetings and virtual events in Microsoft Teams
+title: Explore meetings and events in Microsoft Teams
 metadata:
-  title: Explore meetings and virtual events in Microsoft Teams
-  description: "Explore meetings and virtual events in Microsoft Teams"
-  ms.date: 03/22/2022
+  title: Explore meetings and events in Microsoft Teams
+  description: "Explore meetings and events in Microsoft Teams"
+  ms.date: 07/18/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
@@ -14,17 +14,3 @@ labModal: false
 durationInMinutes: 6
 content: |
   [!include[](includes/02-explore-meetings-virtual-events.md)]
-quiz:
-  title: "Check your knowledge"
-  questions:
-  - content: "What are the two types of meetings offered by Microsoft Teams?"
-    choices:
-    - content: "Private and Group"
-      isCorrect: false
-      explanation: "That's incorrect. These meeting types are not the two types provided by Microsoft Teams. Try again."
-    - content: "Channel and Group"
-      isCorrect: false
-      explanation: "That's incorrect. These meeting types are not the two types provided by Microsoft Teams. Try again."
-    - content: "Private and Channel"
-      isCorrect: true
-      explanation: "That's correct. Microsoft Teams offers two kinds of meetings - private meetings and channel meetings."
