--- a/learn-m365-pr/wwl/manage-meetings-virtual-events-experiences/index.yml
+++ b/learn-m365-pr/wwl/manage-meetings-virtual-events-experiences/index.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Module
 uid: learn.wwl.manage-meetings-virtual-events-experiences
 metadata:
-  title: Manage meetings and virtual events experiences
+  title: Manage meetings and events experiences
   description: "Learn about different meeting solutions in Microsoft Teams, various settings and policies for Teams meetings and live events, and configuration for Audio Conferencing."
-  ms.date: 03/22/2022
+  ms.date: 07/18/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-title: Manage meetings and virtual events experiences
+title: Manage meetings and events experiences
 summary: Learn about different meeting solutions in Microsoft Teams, various settings and policies for Teams meetings and live events, and configuration for Audio Conferencing.
 abstract: |
   By the end of this module, you will be able to:
-  - Understand meetings and virtual events in Microsoft Teams
+  - Understand meetings and events in Microsoft Teams
   - Set up conference bridges
   - Manage meeting policies
   - Configure meeting settings
@@ -31,9 +31,9 @@ products:
 - m365
 - office-teams
 subjects:
-- remote-hybrid-work
-- communication
 - collaboration
+- communication
+- remote-hybrid-work
 units:
 - learn.wwl.manage-meetings-virtual-events-experiences.introduction
 - learn.wwl.manage-meetings-virtual-events-experiences.explore-microsoft-teams
@@ -43,6 +43,7 @@ units:
 - learn.wwl.manage-meetings-virtual-events-experiences.configure-live-events-settings
 - learn.wwl.manage-meetings-virtual-events-experiences.create-and-manage-live-events-policies
 - learn.wwl.manage-meetings-virtual-events-experiences.examine-live-events-across-microsoft-365
+- learn.wwl.manage-meetings-virtual-events-experiences.meet-migration-service
 - learn.wwl.manage-meetings-virtual-events-experiences.knowledge-check
 - learn.wwl.manage-meetings-virtual-events-experiences.summary
 badge:
