--- a/learn-m365-pr/m365/viva-connections-introduction/index.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365 
 title: Introduction to Viva Connections
-summary: Viva Connections is a customizable app experience in Microsoft Teams and is the gateway to modern employee experiences. Viva Connections incorporates curated content and tools from across your Microsoft 365 environment that connect your employees to tasks, organizational news, announcements, people, and resources. This module introduces the primary components of Viva Connections. 
+summary: Learn what is Viva Connections, what users experience with it, when to use Viva Connections, and its technical requirements. 
 abstract: |
   By the end of this module, you'll be able to:
     - Describe the main features of Viva Connections
