refine vc module 2 landing page

--- a/learn-m365-pr/m365/viva-connections-plan/index.yml
+++ b/learn-m365-pr/m365/viva-connections-plan/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365 
 title: Plan for Viva Connections
-summary: Thoughtful planning is the beginning of the successful deployment of Viva Connections. Most of the time spent getting Viva Connections ready for your organization will be in the planning phase. Planning involves building a team of stakeholders who will work together to prioritize scenarios and tasks that can be supported by Viva Connections. Once you’ve formed a planning team, you can get to work meeting requirements, planning scenarios, and a launch plan.
+summary: Thoughtful planning is the beginning of the successful deployment of Viva Connections. Learn how to set up your intranet environment to meet technical requirements, and how to build a team of stakeholders to conduct a needs assessment for Viva Connections. Then learn how to use the needs assessment results to plan the Dashboard cards, Feed, and Resources. Lastly, learn how to plan for the launch.
 abstract: |
   By the end of this module, you'll be able to:
     - Identify key stakeholders for the deployment of Viva Connections
