refine more of vc module 1 landing page

--- a/learn-m365-pr/m365/viva-connections-introduction/index.yml
+++ b/learn-m365-pr/m365/viva-connections-introduction/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365 
 title: Introduction to Viva Connections
-summary: Learn what is Viva Connections, what users experience with it, when to use Viva Connections, and its technical requirements. 
+summary: Viva Connections is built on your current Microsoft 365 ecosystem to provide tailored employee experiences. Learn the main components of Viva Connections, what users experience with it, when to use Viva Connections, and its technical requirements. 
 abstract: |
   By the end of this module, you'll be able to:
     - Describe the main features of Viva Connections
