--- a/learn-m365-pr/wwl/manage-phone-system-for-microsoft-teams/11-knowledge-check.yml
+++ b/learn-m365-pr/wwl/manage-phone-system-for-microsoft-teams/11-knowledge-check.yml
@@ -17,14 +17,14 @@ content: |
 quiz:
   title: "Check your knowledge"
   questions:
-  - content: "Contoso has an existing auto attendant and call queue infrastructure. With its recent Microsoft 365 deployment, It currently uses auto attendants and call queues to connect callers to people within the company and  and wants to migrate its calling environment to Microsoft Teams. What must Contoso do to port its existing phone numbers to Microsoft Teams Teams Phone?"
+  - content: "Contoso has an existing auto attendant and call queue infrastructure. With its recent Microsoft 365 deployment, It currently uses auto attendants and call queues to connect callers to people within the company and  and wants to migrate its calling environment to Microsoft Teams. What must Contoso do to port its existing phone numbers to Microsoft Teams Phone?"
     choices:
     - content: "Set Teams-only coexistence mode for agents"
       isCorrect: false
-      explanation: "That's incorrect. If you set agents' Teams accounts to Teams-only mode, agents who don't meet the requirements aren't included in the call routing list. This feature has nothing to do with porting existing phone numbers to Microsoft Teams Teams Phone."
+      explanation: "That's incorrect. If you set agents' Teams accounts to Teams-only mode, agents who don't meet the requirements aren't included in the call routing list. This feature has nothing to do with porting existing phone numbers to Microsoft Teams Phone."
     - content: "Implement Conference mode"
       isCorrect: false
-      explanation: "That's incorrect. Conference mode is call queue option that significantly reduces the amount of time it takes to connect Teams VOIP calls and PSTN calls to an agent. This feature has nothing to do with porting existing phone numbers to Microsoft Teams Teams Phone."
+      explanation: "That's incorrect. Conference mode is call queue option that significantly reduces the amount of time it takes to connect Teams VOIP calls and PSTN calls to an agent. This feature has nothing to do with porting existing phone numbers to Microsoft Teams Phone."
     - content: "Create a plan to transfer its existing phone numbers to the new auto attendants and call queues in Teams Phone"
       isCorrect: true
       explanation: "That's correct. If you have an existing auto attendant and call queue infrastructure and you're migrating to Teams, you'll need a plan to transfer your existing phone numbers to the new auto attendants and call queues."
