changed files by pdets auto publish service, publishid[e1a8c21a-116b-4af4-97f6-dd4a4e1e735c] and do [publish].

--- a/learn-m365-pr/wwl/plan-configure-network-settings-for-microsoft-teams/08-assess-network-readiness-using-network-connectivity-test-tool.yml
+++ b/learn-m365-pr/wwl/plan-configure-network-settings-for-microsoft-teams/08-assess-network-readiness-using-network-connectivity-test-tool.yml
@@ -1,10 +1,10 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.plan-configure-network-settings-for-microsoft-teams.assess-network-readiness-using-network-connectivity-test-tool
-title: Assess network readiness using Microsoft 365 network connectivity test tool
+title: Assess network readiness
 metadata:
-  title: Assess network readiness using Microsoft 365 network connectivity test tool
-  description: "Assess network readiness using Microsoft 365 network connectivity test tool"
-  ms.date: 10/26/2021
+  title: Assess network readiness
+  description: "Assess network readiness"
+  ms.date: 07/18/2022
   author: wwlpublish
   ms.author: jennyche
   ms.topic: interactive-tutorial
