--- a/learn-m365-pr/m365/zero-trust-networks/summary.yml
+++ b/learn-m365-pr/m365/zero-trust-networks/summary.yml
@@ -3,7 +3,7 @@ uid: learn-m365.zero-trust-networks.summary
 title: Summary
 metadata:
   unitType: summary
-  title: summary
+  title: Summary
   description: Summarize what you've learned in this module.
   ms.date: 6/16/2022
   author: beccarobins
