--- a/learn-m365-pr/wwl/implement-windows-autopilot/2-explore-windows-autopilot.yml
+++ b/learn-m365-pr/wwl/implement-windows-autopilot/2-explore-windows-autopilot.yml
@@ -1,15 +1,16 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.implement-windows-autopilot.explore
+uid: learn.wwl.implement-windows-autopilot.explore-windows-autopilot
 title: Explore Windows Autopilot
 metadata:
   title: Explore Windows Autopilot
   description: "Explore Windows Autopilot"
-  ms.date: 06/30/2021
+  ms.date: 07/20/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 3
 content: |
-  [!include[](includes/2-explore.md)]
+  [!include[](includes/2-explore-windows-autopilot.md)]
