--- a/learn-m365-pr/wwl/implement-windows-autopilot/4-plan-autopilot-profile-settings.yml
+++ b/learn-m365-pr/wwl/implement-windows-autopilot/4-plan-autopilot-profile-settings.yml
@@ -4,12 +4,13 @@ title: Plan the settings for Windows Autopilot profiles
 metadata:
   title: Plan the settings for Windows Autopilot profiles
   description: "Plan the settings for Windows Autopilot profiles"
-  ms.date: 06/30/2021
+  ms.date: 07/20/2022
   author: wwlpublish
   ms.author: tfrink
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 azureSandbox: false
+labModal: false
 durationInMinutes: 2
 content: |
   [!include[](includes/4-plan-autopilot-profile-settings.md)]
